# typed_tables

./: .gitignore  CLAUDE.md  Shape.json  example.py  kevin_db.dot  people.ttq  pyproject.toml
dev-notes/: features.md  graph-language.md  known-bugs.md  transformation -languages.md
docs/: file-formats.md  ttq-grammar.bnf  type-dsl-grammar.bnf
example_data/: _metadata.json
planning/: features.md  known-bugs.md
scratch/: cycle.ttq  cycle_dump.json  cycle_dump.ttq  cycle_dump.xml  cycle_dump.yml  cycle_simplified.ttq  example.py  forward.ttq  forward_dump.ttq  show_demo.ttq
scratch/cycles/: cycle.ttq  cycle_dump.ttq
test_db/: _metadata.json
tests/: __init__.py  test_archive.py  test_bigint.py  test_boolean_string.py  test_compact.py  test_default_values.py  test_enum.py  test_enum_everywhere.py  test_execute_statement.py  test_float16.py  test_fraction.py  test_graph.py  test_graph2.py  test_import.py  test_interface.py  test_lazy_table.py  test_lsp.py  test_meta_builder.py  test_parser.py  test_query_parser.py  test_repl.py  test_self_ref_enum.py  test_set_command.py  test_sets_dicts.py  test_show_references.py  test_status.py  test_storage.py  test_string_ops.py  test_temp_databases.py  test_ttg_engine.py  test_ttg_parser.py  test_ttg_traversal.py  test_ttgc_parser.py  test_ttge_engine.py  test_ttge_parser.py  test_typed_math.py  test_types.py
vscode-ttq/: .vscodeignore  README.md  language-configuration-ttg.json  language-configuration-ttgc.json  language-configuration-ttgs.json  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+140 files in other folders)
