[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typed_tables"
version = "0.1.0"
description = "A typed, file-based database for structured data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ply>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
tt-dump = "typed_tables.dump:main"
ttq = "typed_tables.repl:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
